kubernetes/labs/init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bank-init
  namespace: tk-bank
spec:
  containers:
  - name: web
    image: nginx:1.27-alpine
    volumeMounts:
    - name: shared
      mountPath: /usr/share/nginx/html
  volumes:
  - name: shared
    emptyDir: {}
