kubernetes/labs/pending.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bank-pending
  namespace: tk-bank
spec:
  containers:
  - name: worker
    image: busybox:1.37
    command:
    - sleep
    - '3600'
    resources:
      requests:
        cpu: '100'
        memory: 32Mi
