kubernetes/labs/storage.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bank-storage
  namespace: tk-bank
spec:
  containers:
  - name: worker
    image: busybox:1.37
    command:
    - sleep
    - '3600'
    volumeMounts:
    - name: data
      mountPath: /data
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: bank-learning-data
