kubernetes/labs/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bank-web-ingress
  namespace: tk-bank
spec:
  podSelector:
    matchLabels:
      app: bank-web
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: frontend
    ports:
    - protocol: TCP
      port: 80
